--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>GeegPay</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.3">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#EBECF2">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body class="w-screen">
+<body class="w-screen bg-gray-100">
   <app-root class='w-full'>
 
   </app-root>
