--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <meta name="theme-color" content="#EBECF2">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body class="w-screen bg-gray-100">
-  <app-root class='w-full'>
+<body >
+  <app-root >
 
   </app-root>
 </body>
